# buddy-allocator

./: Cargo.toml  LICENSE  README.md
allocator/: Cargo.toml
allocator/src/: freelist.rs  lib.rs
src/: lib.rs  list.rs
